commit al master del blogpost en su version mas reciente

--- a/articulo.html
+++ b/articulo.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="css/estilos.css"> 
 </head>
 <body>
-    <h1>Este es el titulo</h1>
-    <p>Este es el contenido</p>
+    <div id="container">
+        <div id="post">
+                <h1>Este es un articulo atractivo e interesante</h1>
+                <p>Este es el parrafo de inicio ddonde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+        </div>
+    </div>
 </body>
 </html>
+
