--- a/articulo.html
+++ b/articulo.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
                 <h1>Este es un articulo atractivo e interesante</h1>
                 <p>Este es el parrafo de inicio ddonde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
