--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,10 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Superblog
+            <span id="tagline">
+                Tu blog de confianza
+            </span>
         </div>
         <div id="post">
                 <h1>Este es un articulo atractivo e interesante</h1>
