--- a/articulo.html
+++ b/articulo.html
@@ -9,6 +9,7 @@
         <div id="post">
                 <h1>Este es un articulo atractivo e interesante</h1>
                 <p>Este es el parrafo de inicio ddonde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
+                <p>Esta es una historia muy random ya que no se que meter en este pedaso de la pagina y tengo que introcir algo para el curso de git, aqui le meto mas texto ya que quiero que halla un salto de linie en este espacio xD xD xD</p>
         </div>
     </div>
 </body>
