--- a/articulo.html
+++ b/articulo.html
@@ -9,7 +9,7 @@
         <div id="cabecera">
             Superblog
             <span id="tagline">
-                Tu blog de confianza
+                Este blog es muy malo
             </span>
         </div>
         <div id="post">
