--- a/articulo.html
+++ b/articulo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Blog de la pagina</title>
+    <title>Bienvenido al blog</title>
     <link rel="stylesheet" href="css/estilos.css"> 
 </head>
 <body>
