--- a/articulo.html
+++ b/articulo.html
@@ -18,6 +18,13 @@
                 <p>Esta es una historia muy random ya que no se que meter en este pedaso de la pagina y tengo que introcir algo para el curso de git, aqui le meto mas texto ya que quiero que halla un salto de linie en este espacio xD xD xD</p>
                 <p>jaja saludos</p>        
             </div>
+                    <div id="post">
+                            <h1>Esta es otra parte del blog</h1>
+                            <p>Esto se repite varia veces como si fuera una rama lo estamos haciendo para probar los merge en git</p>  
+                            <p>Esto se repite varia veces como si fuera una rama lo estamos haciendo para probar los merge en git</p> 
+                            <p>Esto se repite varia veces como si fuera una rama lo estamos haciendo para probar los merge en git</p> 
+                            <p>Esto se repite varia veces como si fuera una rama lo estamos haciendo para probar los merge en git</p>     
+                        </div>
      </div>
 </body>
 </html>
