Dejamos solo una linea de texto para mandarlo al hosting

--- a/articulo.html
+++ b/articulo.html
@@ -14,23 +14,7 @@
         </div>
         <div id="post">
                 <h1>Este es un articulo atractivo e interesante</h1>
-                <p>Este es el parrafo de inicio ddonde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
-                <p>Esta es una historia muy random ya que no se que meter en este pedaso de la pagina y tengo que introcir algo para el curso de git, aqui le meto mas texto ya que quiero que halla un salto de linie en este espacio xD xD xD</p>
-                <p>jaja saludos</p>     
-                <h1>Este es un articulo atractivo e interesante</h1>
-                <p>Este es el parrafo de inicio ddonde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
-                <p>Esta es una historia muy random ya que no se que meter en este pedaso de la pagina y tengo que introcir algo para el curso de git, aqui le meto mas texto ya que quiero que halla un salto de linie en este espacio xD xD xD</p>
-                <p>jaja saludos</p> 
-                <h1>Este es un articulo atractivo e interesante</h1>
-                <p>Este es el parrafo de inicio ddonde vamos a explicar las cosas increibles que se pueden hacer con las ramas</p>
-                <p>Esta es una historia muy random ya que no se que meter en este pedaso de la pagina y tengo que introcir algo para el curso de git, aqui le meto mas texto ya que quiero que halla un salto de linie en este espacio xD xD xD</p>
-                <p>jaja saludos</p>    
-            </div>
-                    <div id="post">
-                            <h1>Esta es otra parte del blog</h1>
-                            <p>Esto se repite varia veces como si fuera una rama lo estamos haciendo para probar los merge en git</p>    
-                        </div>
-
+                <p>Solo dejamos esta linea de texto</p>
      </div>
 </body>
 </html>
