Agregamos la line que dice prueba

--- a/articulo.html
+++ b/articulo.html
@@ -15,6 +15,7 @@
         <div id="post">
                 <h1>Este es un articulo atractivo e interesante</h1>
                 <p>Solo dejamos esta linea de texto</p>
+                <p>Probando enviar datos al repositorio desde el servidor</p>>
      </div>
 </body>
 </html>
