--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Superblog
+            Blog increíble
             <span id="tagline">
                 Este blog es demasiado bueno
             </span>
@@ -15,7 +15,8 @@
         <div id="post">
                 <h1>Este es un articulo atractivo e interesante</h1>
                 <p>Solo dejamos esta linea de texto</p>
-                <p>Probando enviar datos al repositorio desde el servidor</p>>
+                <p>Probando enviar datos al repositorio desde el servidor</p>
+                <p>Agregamos esta linea para mirar como reconstruir un commit</p>
      </div>
 </body>
 </html>
